--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "landing-page-next",
   "version": "0.1.0",
   "private": true,
+  "description": "Landing page moderna com Next.js, Tailwind, Supabase e IA",
+  "author": "Gabriel Mossmann",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "preview": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
