--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "landing-page-next",
   "version": "0.1.0",
   "private": true,
-  "description": "Landing page moderna com Next.js, Tailwind, Supabase e IA",
+  "description": "Landing page moderna com Next.js, Tailwind e IA",
   "author": "Gabriel Mossmann",
   "license": "MIT",
   "scripts": {
@@ -16,7 +16,6 @@
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.49.4",
     "aos": "^2.3.4",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
