--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "aos": "^2.3.4",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
